--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,3 +6,12 @@ load: STARTUP
 authors: [ WJZ_P ]
 description: An awesome global market plugin!
 website: https://github.com/WJZ-P
+database: false
+
+commands:
+  awesomemarket:
+    description: 打开全球市场
+    aliases: [amt]
+  test:
+    description: 测试指令
+
