--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -18,3 +18,11 @@ mysql-data-base:
   #all table created by this plugin will use this prefix to prevent from conflicts
   #所有该插件创建的表的前缀，主要用于避免冲突
   table-prefix: am_
+
+#the time that items will stay in the market, in days. When expired, items will be removed from the market
+#物品上架到市场的过期时间，过期后被下架，单位为天
+market-item-expiry: 15
+
+tax:
+  money: 0.05
+  point: 0
