--- a/src/main/resources/Locale_zh.yml
+++ b/src/main/resources/Locale_zh.yml
@@ -20,3 +20,4 @@ connect_mysql_fail: "§b[AwesomeMarket] §e数据库连接出错！"
 create_mysql_fail: "§b[AwesomeMarket] §e创建数据库或表出错！"
 no_vault: "§b[AwesomeMarket] §cVault插件未安装或未启用！"
 payment_type_error: "§b[AwesomeMarket] §c货币类型错误！"
+price_error: "§b[AwesomeMarket] §c请输入正确的价格！"
