--- a/src/main/resources/Locale_zh.yml
+++ b/src/main/resources/Locale_zh.yml
@@ -19,5 +19,9 @@ connect_mysql_success: "§b[AwesomeMarket] §e成功连接数据库！"
 connect_mysql_fail: "§b[AwesomeMarket] §e数据库连接出错！"
 create_mysql_fail: "§b[AwesomeMarket] §e创建数据库或表出错！"
 no_vault: "§b[AwesomeMarket] §cVault插件未安装或未启用！"
+no_player_points: "§b[AwesomeMarket] §cPlayerPoints插件未安装或未启用！"
 payment_type_error: "§b[AwesomeMarket] §c货币类型错误！"
 price_error: "§b[AwesomeMarket] §c请输入正确的价格！"
+pay_tax_fail: "§b[AwesomeMarket] §c您的货币余额不足！上架失败！"
+withdraw_tax: "§b[AwesomeMarket] §e物品上架成功！扣除税款§c %s §a%s"
+args_error_sell: "§b[AwesomeMarket] §c参数错误，正确格式为:\n§e/amt sell money(point) price"
