--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,11 +7,11 @@ authors: [ WJZ_P ]
 description: An awesome global market plugin!
 website: https://github.com/WJZ-P
 #depend: [Vault,PlayerPoints] 注释掉是因为没装插件的报错太粗暴了。交给插件本身处理。
-
+softdepend: [ Vault,PlayerPoints ]
 commands:
   awesomemarket:
     description: 打开全球市场
-    aliases: [amt]
+    aliases: [ amt ]
   test:
     description: 测试指令
 
