--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -15,13 +15,13 @@ mysql-data-base:
   #不要有-等特殊符号，小写
   #do not use "-" or other special characters, use lowercase
   database-name: awesome_market
-  #all table created by this plugin will use this prefix to prevent from conflicts
-  #所有该插件创建的表的前缀，主要用于避免冲突
+  #all table created by this plugin will use this prefix to prevent from conflicts. Do not modify this if you don't know what it means.
+  #所有该插件创建的表的前缀，主要用于避免冲突,若无则请勿修改。
   table-prefix: ""
 
 #the time that items will stay in the market, in days. When expired, items will be removed from the market
 #物品上架到市场的过期时间，过期后被下架，单位为天
-market-item-expiry: 15
+market-item-expiry: 30
 
 tax:
   money: 0.05
