--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -19,6 +19,13 @@ mysql-data-base:
   #所有该插件创建的表的前缀，主要用于避免冲突,若无则请勿修改。
   table-prefix: ""
 
+  pool:
+    maximumPoolSize: 20       #最大连接数
+    minimumIdle: 10           #最小空闲数
+    idleTimeout: 600000       #空闲连接超时时间
+    maxLifetime: 1800000      #连接最大生命周期
+    connectionTimeout: 30000  #获取连接超时时间
+
 #the time that items will stay in the market, in days. When expired, items will be removed from the market
 #物品上架到市场的过期时间，过期后被下架，单位为天
 market-item-expiry: 30
