--- a/src/main/resources/Locale_zh.yml
+++ b/src/main/resources/Locale_zh.yml
@@ -46,7 +46,10 @@ market-GUI:
       - §e当前货币类型：§a%s
 
     commodity:
-      - §c§l✦§6§l✦§e§l✦§a§l✦§b§l✦§9§l✦§d§l✦ §f§l商品信息 §d§l✦§9§l✦§b§l✦§a§l✦§e§l✦§6§l✦§c§l✦
+      - §x§3§5§f§b§f§b§m=§x§3§a§f§9§f§a§m=§x§4§0§f§7§f§8§m=§x§4§5§f§5§f§7§m=§x§4§a§f§3§f§5§m=§m §m   §x§4§a§f§3§f§5§l商§x§4§7§f§4§f§6§l品§x§4§4§f§4§f§7§l信§x§4§1§f§5§f§8§l息§m§l §m§l §m§l §x§4§2§f§3§f§9§m=§x§4§b§e§9§f§a§m=§x§5§4§d§f§f§c§m=§x§5§d§d§6§f§d§m=§x§6§6§c§c§f§f§m=
+      -
       - §b价格：§e%price% %currency%
       - §3出售者：§a%player%
       - §3上架时间：§d%on_sell_time%
+      -
+      - §a点击购买
