--- a/src/main/resources/Locale_zh.yml
+++ b/src/main/resources/Locale_zh.yml
@@ -80,6 +80,9 @@ market-GUI:
       - §3出售玩家：§a%player%
       - §3上架时间：§d%on_sell_time%
       - ""
+      - §a点击鼠标右键 - 查看§6%player%§a的所有商品
+      - §ashift+右键  - 仅查看该种商品
+      - ""
       - §a§l点击购买
       - §8=========================
 
