--- a/src/main/resources/Locale_zh.yml
+++ b/src/main/resources/Locale_zh.yml
@@ -14,29 +14,29 @@ unload_plugin: |
   §e感谢使用(｡•̀ᴗ-)✧!
   §c==============================
 
-try_create_database: "§b[AwesomeMarket] §e数据库不存在，创建awesome_market数据库。"
-connect_mysql_success: "§b[AwesomeMarket] §e成功连接数据库！"
-connect_mysql_fail: "§b[AwesomeMarket] §e数据库连接出错！"
-create_mysql_fail: "§b[AwesomeMarket] §e创建数据库或表出错！"
-no_vault: "§b[AwesomeMarket] §cVault插件未安装或未启用！"
-no_player_points: "§b[AwesomeMarket] §cPlayerPoints插件未安装或未启用！"
-payment_type_error: "§b[AwesomeMarket] §c货币类型错误！"
-price_error: "§b[AwesomeMarket] §c请输入正确的价格！"
-pay_tax_fail: "§b[AwesomeMarket] §c您的货币余额§e %.2f§c 不足以付税§e%.2f§c！上架失败！"
-withdraw_tax: "§b[AwesomeMarket] §e物品上架成功！扣除税款§c %.2f §a%s"
-args_error_sell: "§b[AwesomeMarket] §c参数错误，正确格式为:\n§e/amt sell money(point) price"
-empty_item_error_sell: "§b[AwesomeMarket] §e请把要上架的商品置于主手中！"
+try_create_database: "§7[§b全球市场§7] §e数据库不存在，创建awesome_market数据库。"
+connect_mysql_success: "§7[§b全球市场§7] §e成功连接数据库！"
+connect_mysql_fail: "§7[§b全球市场§7] §e数据库连接出错！"
+create_mysql_fail: "§7[§b全球市场§7] §e创建数据库或表出错！"
+no_vault: "§7[§b全球市场§7] §cVault插件未安装或未启用！"
+no_player_points: "§7[§b全球市场§7] §cPlayerPoints插件未安装或未启用！"
+payment_type_error: "§7[§b全球市场§7] §c货币类型错误！"
+price_error: "§7[§b全球市场§7] §c请输入正确的价格！"
+pay_tax_fail: "§7[§b全球市场§7] §c您的货币余额§e %.2f§c 不足以付税§e%.2f§c！上架失败！"
+withdraw_tax: "§7[§b全球市场§7] §e物品上架成功！扣除税款§c %.2f §a%s"
+args_error_sell: "§7[§b全球市场§7] §c参数错误，正确格式为:\n§e/amt sell money(point) price"
+empty_item_error_sell: "§7[§b全球市场§7] §e请把要上架的商品置于主手中！"
 
 market_name: "§e§l全球市场"
 
-buy_success: §b[AwesomeMarket] §a您花费§e %money%§6 %currency% §a购买了§e%seller%§a的§7[§r%item%§7] §a!
-add_item_to_storage: §b[AwesomeMarket] §c背包空间不足! 物品已移至暂存库!
-get_storage_item_fail: §b[AwesomeMarket] §c背包空间不足! 请先清理出足够的背包!
-take_item_from_storage: §b[AwesomeMarket] §a物品已成功入库!
+buy_success: §7[§b全球市场§7] §a您花费§e %money%§6 %currency% §a购买了§e%seller%§a的§7[§r%item%§7] §a!
+add_item_to_storage: §7[§b全球市场§7] §c背包空间不足! 物品已移至暂存库!
+get_storage_item_fail: §7[§b全球市场§7] §c背包空间不足! 请先清理出足够的背包!
+take_item_from_storage: §7[§b全球市场§7] §a物品已成功入库!
 
 buy_fail:
-  lack-of-eco: §b[AwesomeMarket] §c余额不足! 您仍需§e %money% §6 %currency% §c以购买!
-  has-been-bought: §b[AwesomeMarket] §c购买失败! 手慢了! 物品已被买走...
+  lack-of-eco: §7[§b全球市场§7] §c余额不足! 您仍需§e %money% §6 %currency% §c以购买!
+  has-been-bought: §7[§b全球市场§7] §c购买失败! 手慢了! 物品已被买走...
 
 sort:
   time_desc: §6最新商品
@@ -75,30 +75,32 @@ market-GUI:
 
     commodity:
       - §8=========================
-      - ""
-      - §3物品价格：§e%price% §6%currency%
-      - §3出售玩家：§a%player%
-      - §3上架时间：§d%on_sell_time%
-      - ""
-      - §a鼠标右键   - 仅查看该种商品
+      - §7»§6💎§3 物品价格：§e%price% §6%currency%
+      - §7»§6👑§3 出售玩家：§a%player%
+      - §7»§6⏳§3 上架时间：§d%on_sell_time%
+      - "§8§l——————————"
+      - §a鼠标右键 - 仅查看该种商品
       - §ashift右键 - 查看§6%player%§a的商品
       - ""
-      - §a§l点击购买
+      - §7» §a§l点击购买
       - §8=========================
 
-    statistic: §6统计数据
+    statistic: §3统计数据§7 - §6%player%
     statistic-loading: §c正在加载...
     statistic-lore:
-      - "§3统计数据"
+      - §8»»————————————««
+      - §a📦 商品交易  §8»»
+      - "  §7»  🛒 §a购买: §c%buy_count% §6件"
+      - "  §7»  🛍 §a出售: §c%sell_count% §6件"
       - ""
-      - §a共买入了 §c%buy_count% §a件商品
-      - §a共卖出了 §c%sell_count% §a件商品
-      - "§c总花费:"
-      - " §e%money% §6%currency_money%"
-      - " §e%point% §6%currency_point%"
-      - "§c总收入:"
-      - " §e%money_get% §6%currency_money%"
-      - " §e%point_get% §6%currency_point%"
+      - §e💰 花费统计  §8»»
+      - "  §7»  💸 §e支出: §c%money% §6%currency_money%"
+      - "  §7»  💸 §e支出: §c%point% §6%currency_point%"
+      - ""
+      - §b⭐ 收入统计  §8»»
+      - "  §7»  🌟 §b收入: §c%money_get% §6%currency_money%"
+      - "  §7»  🌟 §b收入: §c%point_get% §6%currency_point%"
+      - §8»»————————————««
 
 confirm-GUI:
   buy:
@@ -113,6 +115,7 @@ storage-GUI:
   prev-page: §e上一页
   next-page: §e下一页
   market: §e点击返回全球市场
+
   item:
     - §8=========================
     - §3购得时间：§d%buy_time%
@@ -121,3 +124,17 @@ storage-GUI:
     - ""
     - §a§l点击入库!
     - §8=========================
+
+  receipt: §a交易收据
+  receipt-lore:
+    - §8=========================
+    - §3物品：§7[§r%item%§7]
+    - §3金额：§c%money% §6%currency%
+    - §3买家：§e%player%
+    - §3时间：§d%time%
+    - ""
+    - §a§l 点击提现
+    - §8=========================
+
+tip:
+  item-is-sold: §7[§b全球市场§7] §a您的物品§7[%item%§7]§a已被§6%buyer%§a购买!
