--- a/src/main/resources/Locale_zh.yml
+++ b/src/main/resources/Locale_zh.yml
@@ -75,14 +75,16 @@ market-GUI:
 
     commodity:
       - §8=========================
+      - ""
       - §7»§6💎§3 物品价格：§e%price% §6%currency%
       - §7»§6👑§3 出售玩家：§a%player%
       - §7»§6⏳§3 上架时间：§d%on_sell_time%
-      - "§8§l——————————"
-      - §a鼠标右键 - 仅查看该种商品
-      - §ashift右键 - 查看§6%player%§a的商品
+      - "§7▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪"
+      - §7»🔍§a鼠标右键 - 仅查看该种商品
+      - §7»🔍§ashift+右键 - 查看§6%player%§a的商品
       - ""
       - §7» §a§l点击购买
+      - ""
       - §8=========================
 
     statistic: §3统计数据§7 - §6%player%
@@ -106,7 +108,7 @@ confirm-GUI:
   buy:
     title: §c§l确认支付?
     confirm: §a点击以确认支付!
-    confirm-lore: §e你将支付 §c%price% %currency% §e给 §a%player%
+    confirm-lore: §e你将支付 §c%price% §6%currency% §e给 §a%player%
     cancel: §c点击以取消支付!
     cancel-lore: §d我再想想...
 
@@ -133,8 +135,9 @@ storage-GUI:
     - §3买家：§e%player%
     - §3时间：§d%time%
     - ""
-    - §a§l 点击提现
+    - §a§l 未设定
     - §8=========================
 
 tip:
   item-is-sold: §7[§b全球市场§7] §a您的物品§7[%item%§7]§a已被§6%buyer%§a购买!
+  receive-money: §7[§b全球市场§7] §a您获得了§e %money%§6 %currency% §a作为§7[§r%item%§7]§a的售出收益!
