--- a/src/main/resources/Locale_zh.yml
+++ b/src/main/resources/Locale_zh.yml
@@ -74,18 +74,26 @@ market-GUI:
       - §6§l 点击恢复默认排序
 
     commodity:
-      - §8=========================
-      - ""
-      - §7»§6💎§3 物品价格：§e%price% §6%currency%
-      - §7»§6👑§3 出售玩家：§a%player%
-      - §7»§6⏳§3 上架时间：§d%on_sell_time%
-      - "§7▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪"
-      - §7»🔍§a鼠标右键 - 仅查看该种商品
-      - §7»🔍§ashift+右键 - 查看§6%player%§a的商品
-      - ""
-      - §7» §a§l点击购买
-      - ""
-      - §8=========================
+      lore:
+        - §8=============================
+        - ""
+        - §7»§6 🪙 §3 物品价格：§e%price% §6%currency%
+        - §7»§e 🧑 §3 出售玩家：§a%player%
+        - §7»§b 📅 §3 上架时间：§d%on_sell_time%
+        - ""
+        - "§7§l▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▪▫▪▫▪▫▪▫▪▪▫▪"
+        - ""
+        - §7» 🔍 §a鼠标右键 - 仅查看该种商品
+        - §7» 🔍 §ashift+右键 - 查看§6%player%§a的商品
+        - ""
+        - "%operation%"
+        - ""
+        - §8=============================
+
+      buy: §7» ✅ §a§l点击购买
+      unlisted: §7» ❌ §c§lshift+左键下架商品
+
+
 
     statistic: §3统计数据§7 - §6%player%
     statistic-loading: §c正在加载...
@@ -141,3 +149,7 @@ storage-GUI:
 tip:
   item-is-sold: §7[§b全球市场§7] §a您的物品§7[%item%§7]§a已被§6%buyer%§a购买!
   receive-money: §7[§b全球市场§7] §a您获得了§e %money%§6 %currency% §a作为§7[§r%item%§7]§a的售出收益!
+  can-not-buy-self: §7[§b全球市场§7] §c您不能购买自己的商品!
+  unlisted-fail: §7[§b全球市场§7] §c下架失败! 物品已经被买走啦!
+  unlisted-success: §7[§b全球市场§7] §a物品成功下架至背包!
+  unlisted-storage: §7[§b全球市场§7] §c背包空间不足! 下架物品已移至暂存库!
