--- a/src/main/resources/Locale_zh.yml
+++ b/src/main/resources/Locale_zh.yml
@@ -75,23 +75,23 @@ market-GUI:
 
     commodity:
       lore:
-        - §8=============================
+        - §8==========§7§l[§a§l 市场商品 §7§l]§8==========
         - ""
         - §7»§6 🪙 §3 物品价格：§e%price% §6%currency%
         - §7»§e 🧑 §3 出售玩家：§a%player%
         - §7»§b 📅 §3 上架时间：§d%on_sell_time%
         - ""
-        - "§7§l▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▪▫▪▫▪▫▪▫▪▪▫▪"
+        - "§7§l▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▪▫▪▫▪▫▪▫▪▪▫▪▫▪"
         - ""
-        - §7» 🔍 §a鼠标右键 - 仅查看该种商品
-        - §7» 🔍 §ashift+右键 - 查看§6%player%§a的商品
+        - §7»§b 🔍 §c鼠标右键 §a- 仅查看该种商品
+        - §7»§b 🔍 §cshift+右键 §a- 查看§6%player%§a的商品
         - ""
         - "%operation%"
         - ""
-        - §8=============================
+        - §8==============================
 
-      buy: §7» ✅ §a§l点击购买
-      unlisted: §7» ❌ §c§lshift+左键下架商品
+      buy: §7»§2 ✅ §a§l点击购买
+      unlisted: §7»§4 ❌ §c§lshift+左键下架商品
 
 
 
@@ -100,16 +100,16 @@ market-GUI:
     statistic-lore:
       - §8»»————————————««
       - §a📦 商品交易  §8»»
-      - "  §7»  🛒 §a购买: §c%buy_count% §6件"
-      - "  §7»  🛍 §a出售: §c%sell_count% §6件"
+      - "  §7»§f  🛒 §a购买: §c%buy_count% §6件"
+      - "  §7»§6  🛍 §a出售: §c%sell_count% §6件"
       - ""
       - §e💰 花费统计  §8»»
-      - "  §7»  💸 §e支出: §c%money% §6%currency_money%"
-      - "  §7»  💸 §e支出: §c%point% §6%currency_point%"
+      - "  §7»§a  💸 §e支出: §c%money% §6%currency_money%"
+      - "  §7»§a  💸 §e支出: §c%point% §6%currency_point%"
       - ""
       - §b⭐ 收入统计  §8»»
-      - "  §7»  🌟 §b收入: §c%money_get% §6%currency_money%"
-      - "  §7»  🌟 §b收入: §c%point_get% §6%currency_point%"
+      - "  §7»§e  🌟 §b收入: §c%money_get% §6%currency_money%"
+      - "  §7»§e  🌟 §b收入: §c%point_get% §6%currency_point%"
       - §8»»————————————««
 
 confirm-GUI:
@@ -127,24 +127,33 @@ storage-GUI:
   market: §e点击返回全球市场
 
   item:
-    - §8=========================
-    - §3购得时间：§d%buy_time%
-    - §3物品价格：§e%price% §6%currency%
-    - §3出售玩家：§a%player%
+    - §8==========§7§l[§a§l 待取商品 §7§l]§8==========
     - ""
-    - §a§l点击入库!
-    - §8=========================
+    - §7»§b 📅 §3购得时间：§d%buy_time%
+    - §7»§6 💰 §3物品价格：§e%price% §6%currency%
+    - §7»§e 🧑 §3出售玩家：§a%player%
+    - ""
+    -  §7»§2 📦 §a§l点击入库
+    - §8==============================
+
+  unlisted-item:
+    - §8==========§7§l[§c§l 下架物品 §7§l]§8==========
+    - §7»§b 📅 §3下架时间：§d%time%
+    - §7»§6 💰 §3出售价格：§e%price% §6%currency%
+    - ""
+    - §7» 👆 §a§l点击取回!
+    - §8==============================
 
   receipt: §a交易收据
   receipt-lore:
-    - §8=========================
+    - §8=============================
     - §3物品：§7[§r%item%§7]
     - §3金额：§c%money% §6%currency%
     - §3买家：§e%player%
     - §3时间：§d%time%
     - ""
     - §a§l 未设定
-    - §8=========================
+    - §8=============================
 
 tip:
   item-is-sold: §7[§b全球市场§7] §a您的物品§7[%item%§7]§a已被§6%buyer%§a购买!
