--- a/src/main/resources/Locale_zh.yml
+++ b/src/main/resources/Locale_zh.yml
@@ -84,7 +84,7 @@ market-GUI:
         - "§7§l▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▪▫▪▫▪▫▪▫▪▪▫▪▫▪"
         - ""
         - §7»§b 🔍 §c鼠标右键 §a- 仅查看该种商品
-        - §7»§b 🔍 §cshift+右键 §a- 查看§6%player%§a的商品
+        - §7»§b 🔍 §cshift+右键 §a- 查看玩家商店
         - ""
         - "%operation%"
         - ""
@@ -100,7 +100,7 @@ market-GUI:
     statistic-lore:
       - §8»»————————————««
       - §a📦 商品交易  §8»»
-      - "  §7»§f  🛒 §a购买: §c%buy_count% §6件"
+      - "  §7»§b  🛒 §a购买: §c%buy_count% §6件"
       - "  §7»§6  🛍 §a出售: §c%sell_count% §6件"
       - ""
       - §e💰 花费统计  §8»»
@@ -121,7 +121,7 @@ confirm-GUI:
     cancel-lore: §d我再想想...
 
 storage-GUI:
-  title: §9§l暂存库
+  title: §9§l暂存库 §7- §8%player%
   prev-page: §e上一页
   next-page: §e下一页
   market: §e点击返回全球市场
