--- a/src/main/resources/Locale_zh.yml
+++ b/src/main/resources/Locale_zh.yml
@@ -70,6 +70,7 @@ market-GUI:
     help-book: §3帮助
     help-book-lore:
       - §a§l /amt sell 货币类型 价格 §r§a- 上架主手物品
+      - §a§l /amt view 玩家名 §r§a- 查看玩家商店
       - ""
       - §6§l 点击恢复默认排序
 
@@ -133,7 +134,7 @@ storage-GUI:
     - §7»§6 💰 §3物品价格：§e%price% §6%currency%
     - §7»§e 🧑 §3出售玩家：§a%player%
     - ""
-    -  §7»§2 📦 §a§l点击入库
+    - §7»§2 📦 §a§l点击入库
     - §8==============================
 
   unlisted-item:
@@ -167,7 +168,10 @@ command:
   amt:
     error:
       not-player: §7[§b全球市场§7] §c该指令仅限玩家使用!
-  view:
+
+  general:
     error:
+      no-permission: §7[§b全球市场§7] §c你没有权限使用该指令!
+      lack-of-params: §7[§b全球市场§7] §c参数不足!
       lack-of-name: §7[§b全球市场§7] §c请输入玩家名!
       name-not-exist: §7[§b全球市场§7] §c玩家不存在!
