--- a/src/main/resources/Locale_zh.yml
+++ b/src/main/resources/Locale_zh.yml
@@ -115,8 +115,8 @@ market-GUI:
       - ""
       - "%operation%"
       - §8»»————————————««
-    statistic-look-up: §7»§b 🔍 §a点击查看交易记录
-    statistic-no-permission-look-up: §7»§4 ❌ §c你没有权限查看TA的交易记录!
+    statistic-look-up: §7»§b 🔍 §a§l点击查看交易记录
+    statistic-no-permission-look-up: §7»§4 ❌ §c§l你没有权限查看TA的交易记录!
 confirm-GUI:
   buy:
     title: §c§l确认支付?
@@ -149,19 +149,21 @@ storage-GUI:
     - §7» 👆 §a§l点击取回!
     - §8==============================
 
-  receipt: §a交易收据
-  receipt-lore:
-    - §8=============================
-    - §3物品：§7[§r%item%§7]
-    - §3金额：§c%money% §6%currency%
-    - §3买家：§e%player%
-    - §3时间：§d%time%
-    - ""
-    - §a§l 未设定
-    - §8=============================
-
 transaction-GUI:
   title: §3§l交易记录 §7- §8%player%
+  is-claimed: §b ✅ §a§l卖家已确认
+  not-claimed: §4 ❌ §c§l卖家未确认!
+  transaction-item-lore:
+    - §8==========§7§l[§b§l 交易记录 §7§l]§8==========
+    - §7»§a 👤 §3出售玩家：§a%seller%
+    - §7»§9 🛍️ §3购买玩家：§9%buyer%
+    - §7»§6 💰 §3交易价格：§e%price% §6%priceType%
+    - §7»§b 📅 §3交易时间：§d%trade_time%
+    - ""
+    - §7» %isClaimed%
+    - §8==============================
+
+
   market: §e点击返回全球市场
   prev-page: §e上一页
   prev-page-lore: §e%d / %d 页
