--- a/src/main/resources/Locale_zh.yml
+++ b/src/main/resources/Locale_zh.yml
@@ -139,6 +139,7 @@ storage-GUI:
     - §7»§e 🧑 §3出售玩家：§a%player%
     - ""
     - §7»§2 📦 §a§l点击入库
+    - ""
     - §8==============================
 
   unlisted-item:
@@ -147,6 +148,7 @@ storage-GUI:
     - §7»§6 💰 §3出售价格：§e%price% §6%currency%
     - ""
     - §7» 👆 §a§l点击取回!
+    - ""
     - §8==============================
 
 transaction-GUI:
@@ -155,12 +157,14 @@ transaction-GUI:
   not-claimed: §4 ❌ §c§l卖家未确认!
   transaction-item-lore:
     - §8==========§7§l[§b§l 交易记录 §7§l]§8==========
-    - §7»§a 👤 §3出售玩家：§a%seller%
-    - §7»§9 🛍️ §3购买玩家：§9%buyer%
+    - ""
+    - §7»§a 👤 §3出售玩家：§c%seller%
+    - §7»§9 🛍 §3购买玩家：§a%buyer%
     - §7»§6 💰 §3交易价格：§e%price% §6%priceType%
     - §7»§b 📅 §3交易时间：§d%trade_time%
     - ""
     - §7» %isClaimed%
+    - ""
     - §8==============================
 
 
