--- a/src/main/resources/Locale_zh.yml
+++ b/src/main/resources/Locale_zh.yml
@@ -27,8 +27,6 @@ withdraw_tax: "§7[§b全球市场§7] §e物品上架成功！扣除税款§c %
 args_error_sell: "§7[§b全球市场§7] §c参数错误，正确格式为:\n§e/amt sell money(point) price"
 empty_item_error_sell: "§7[§b全球市场§7] §e请把要上架的商品置于主手中！"
 
-market_name: "§e§l全球市场"
-
 buy_success: §7[§b全球市场§7] §a您花费§e %money%§6 %currency% §a购买了§e%seller%§a的§7[§r%item%§7] §a!
 add_item_to_storage: §7[§b全球市场§7] §c背包空间不足! 物品已移至暂存库!
 get_storage_item_fail: §7[§b全球市场§7] §c背包空间不足! 请先清理出足够的背包!
@@ -45,78 +43,80 @@ sort:
   price_asc: §6低价优先
 
 market-GUI:
-  name:
-    prev-page: §e上一页
-    prev-page-lore: §e%d / %d 页
+  title: §e§l全球市场 %seller%
+  seller: §7- §c%player2%
+  prev-page: §e上一页
+  prev-page-lore: §e%d / %d 页
 
-    next-page: §e下一页
-    next-page-lore: §e%d / %d 页
+  next-page: §e下一页
+  next-page-lore: §e%d / %d 页
 
-    sort-type: §c商品排序
-    sort-type-lore:
-      - §e当前：§6%sort%
+  sort-type: §c商品排序
+  sort-type-lore:
+    - §e当前：§6%sort%
+    - ""
+    - §a§l点击切换
+
+  currency-type: §b货币类型
+  currency-type-lore:
+    - §e当前：§6%currency%
+    - ""
+    - §a§l点击切换
+
+  storage: §9暂存库
+  storage-lore: §5背包已满时购得物品会存于此处
+
+  help-book: §3帮助
+  help-book-lore:
+    - §a§l /amt sell 货币类型 价格 §r§a- 上架主手物品
+    - §a§l /amt view 玩家名 §r§a- 查看玩家商店
+    - §a§l /amt find §r§a- 在商店查找主手物品
+    - ""
+    - §6§l 点击恢复默认排序
+
+  commodity:
+    lore:
+      - §8==========§7§l[§a§l 市场商品 §7§l]§8==========
       - ""
-      - §a§l点击切换
-
-    currency-type: §b货币类型
-    currency-type-lore:
-      - §e当前：§6%currency%
+      - §7»§6 🪙 §3 物品价格：§e%price% §6%currency%
+      - §7»§e 🧑 §3 出售玩家：§a%player%
+      - §7»§b 📅 §3 上架时间：§d%on_sell_time%
       - ""
-      - §a§l点击切换
-
-    storage: §9暂存库
-    storage-lore: §5背包已满时购得物品会存于此处
-
-    help-book: §3帮助
-    help-book-lore:
-      - §a§l /amt sell 货币类型 价格 §r§a- 上架主手物品
-      - §a§l /amt view 玩家名 §r§a- 查看玩家商店
-      - §a§l /amt find §r§a- 在商店查找主手物品
+      - "§7§l▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▪▫▪▫▪▫▪▫▪▪▫▪▫▪"
       - ""
-      - §6§l 点击恢复默认排序
-
-    commodity:
-      lore:
-        - §8==========§7§l[§a§l 市场商品 §7§l]§8==========
-        - ""
-        - §7»§6 🪙 §3 物品价格：§e%price% §6%currency%
-        - §7»§e 🧑 §3 出售玩家：§a%player%
-        - §7»§b 📅 §3 上架时间：§d%on_sell_time%
-        - ""
-        - "§7§l▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▫▪▪▫▪▫▪▫▪▫▪▪▫▪▫▪"
-        - ""
-        - §7»§b 🔍 §c鼠标右键 §a- 仅查看该种商品
-        - §7»§b 🔍 §cshift+右键 §a- 查看玩家商店
-        - ""
-        - "%operation%"
-        - ""
-        - §8==============================
-
-      buy: §7»§2 ✅ §a§l点击购买
-      unlisted: §7»§4 ❌ §c§lshift+左键下架商品
-
-
-
-    statistic: §3统计数据§7 - §6%player%
-    statistic-loading: §c正在加载...
-    statistic-lore:
-      - §8»»————————————««
-      - §a📦 商品交易  §8»»
-      - "  §7»§b  🛒 §a购买: §c%buy_count% §6件"
-      - "  §7»§6  🛍 §a出售: §c%sell_count% §6件"
-      - ""
-      - §e💰 花费统计  §8»»
-      - "  §7»§a  💸 §e支出: §c%money% §6%currency_money%"
-      - "  §7»§a  💸 §e支出: §c%point% §6%currency_point%"
-      - ""
-      - §b⭐ 收入统计  §8»»
-      - "  §7»§e  🌟 §b收入: §c%money_get% §6%currency_money%"
-      - "  §7»§e  🌟 §b收入: §c%point_get% §6%currency_point%"
+      - §7»§b 🔍 §c鼠标右键 §a- 仅查看该种商品
+      - §7»§b 🔍 §cshift+右键 §a- 查看玩家商店
       - ""
       - "%operation%"
-      - §8»»————————————««
-    statistic-look-up: §7»§b 🔍 §a§l点击查看交易记录
-    statistic-no-permission-look-up: §7»§4 ❌ §c§l你没有权限查看TA的交易记录!
+      - ""
+      - §8==============================
+
+    buy: §7»§2 ✅ §a§l点击购买
+    unlisted: §7»§4 ❌ §c§lshift+左键下架商品
+
+
+
+  statistic: §3统计数据§7 - §6%player%
+  statistic-loading: §c正在加载...
+  statistic-lore:
+    - §8»»————————————««
+    - §a📦 商品交易  §8»»
+    - "  §7»§b  🛒 §a购买: §c%buy_count% §6件"
+    - "  §7»§6  🛍 §a出售: §c%sell_count% §6件"
+    - ""
+    - §e💰 花费统计  §8»»
+    - "  §7»§a  💸 §e支出: §c%money% §6%currency_money%"
+    - "  §7»§a  💸 §e支出: §c%point% §6%currency_point%"
+    - ""
+    - §b⭐ 收入统计  §8»»
+    - "  §7»§e  🌟 §b收入: §c%money_get% §6%currency_money%"
+    - "  §7»§e  🌟 §b收入: §c%point_get% §6%currency_point%"
+    - ""
+    - "%operation%"
+    - §8»»————————————««
+  statistic-look-up: §7»§b 🔍 §a§l点击查看交易记录
+  statistic-no-permission-look-up: §7»§4 ❌ §c§l你没有权限查看TA的交易记录!
+
 confirm-GUI:
   buy:
     title: §c§l确认支付?
@@ -158,7 +158,7 @@ transaction-GUI:
   title: §3§l交易记录 §7- §1%player% %another_player%
   is-claimed: §b ✅ §a§l卖家已收款
   not-claimed: §4 ❌ §c§l卖家未收款
-  another-player: §8§l ❌ §c%player2%
+  another-player: §8§l❌ §c%player2%
   transaction-item-lore:
     - §8==========§7§l[§b§l 交易记录 §7§l]§8==========
     - ""
